every page done
slicing from design with html and css with animation grid in detail destination and activity

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#article-destination">Wisata</a>
                     <a href="#article-bussiness">Usaha</a>
                     <a href="">Lokasi</a>
-                    <a href="">Staff</a>
+                    <a href="staff.html">Staff</a>
                 </div>
             </nav>
             <div class="menu">
@@ -68,7 +68,7 @@
                     <div class="text-focal-point-bumdes-activity">
                         <p class="tagline">Pembukaan PMM Tematik BUMDES</p>
                         <p class="description">Pengabdian Pada Masyarakat oleh Mahasiswa atau biasa disebut PMM merupakan program dari Universitas Muhammadiyah Malang</p>
-                        <a href="" class="read-more">(Baca selengkapnya)</a>
+                        <a href="activity.html" class="read-more">(Baca selengkapnya)</a>
                     </div>
                 </section>
                 <section class="slide-activity">
@@ -177,7 +177,7 @@
                             <p>Pantai Wonogoro memiliki garis pantai yang cukup panjang, mencapai lebih dari 1 kilometer dengan kedua ujungnya dibatasi oleh bukit. Pantai ini sangatlah landai, hingga membuatnya terkesan semakin luas. Memiliki pasir putih yang terhampar luas sejauh mata memandang dan bercampur dengan pasir besi yang akan nampak berkilau saat terkena sinar matahari.</p>
                             <p>Dibagian sisi lain dari pantai ini juga terdapat deretan perbukitan hijau yang memanjang dan tampak sangat rindang. Kamu bisa mencoba mendaki bukit ini untuk dapat melihat panorama pantai dari atas ketinggian. Dengan melihat dari atas bukit ini, kamu bisa memandang birunya lautan yang sangat luas.</p>
                         </div>
-                        <a href="">(Baca selengkapnya)</a>
+                        <a href="destination.html">(Baca selengkapnya)</a>
                     </div>
                 </section>
             </div>
