--- a/staff.html
+++ b/staff.html
@@ -21,10 +21,10 @@
                     <div class="overlay-content">
                         <a  href="/index.html">Beranda</a>
                         <a href="#article-activity">Kegiatan</a>
-                        <a class="active" href="#article-activity">Wisata</a>
+                        <a  href="#article-activity">Wisata</a>
                         <a href="#article-bussiness">Usaha</a>
                         <a href="">Lokasi</a>
-                        <a href="">Staff</a>
+                        <a class="active" href="">Staff</a>
                     </div>
                 </nav>
                 <div class="menu">
