--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
                             <img src="/images/image-content/activity/pemijahan_lele.png" alt="">
                         </div>
                         <div class="text-bumdes-activity">
-                            <p class="tagline">Anggota Bumdes Melakukan Pemijahan Lele</p>
-                            <p class="description">Pemijahan lele dilakukan oleh anggota BUMDES untuk mendapatkan bibit lele yang baru dari hasil perkawinan antara lele betina dengan lele jantan. Biasanya dalam satu kolam terdapat dua lele betina yang siap bertelur  dan satu lele jantan. Kegiatan ini biasa dilakukan dua minggu sekali untuk terus dapat menghasilkan produksi bibit lele yang siap dijual secara berkala </p>
+                            <p class="tagline">a</p>
+                            <p class="description">sm</p>
                             <a href="" class="read-more">(Baca selengkapnya)</a>
                         </div>
                     </div>
@@ -137,8 +137,8 @@
                             <img src="/images/image-content/activity/pemijahan_lele.png" alt="">
                         </div>
                         <div class="text-bumdes-activity">
-                            <p class="tagline">Anggota Bumdes Melakukan Pemijahan Lele</p>
-                            <p class="description">Pemijahan lele dilakukan oleh anggota BUMDES untuk mendapatkan bibit lele yang baru dari hasil perkawinan antara lele betina dengan lele jantan. Biasanya dalam satu kolam terdapat dua lele betina yang siap bertelur  dan satu lele jantan. Kegiatan ini biasa dilakukan dua minggu sekali untuk terus dapat menghasilkan produksi bibit lele yang siap dijual secara berkala </p>
+                            <p class="tagline">a</p>
+                            <p class="description">sd</p>
                             <a href="" class="read-more">(Baca selengkapnya)</a>
                         </div>
                     </div>
@@ -189,19 +189,7 @@
                     <div class="grid-container">
                         <div class="focal-bussiness">
                             <img src="/images/image-content/bussiness/focal-bibit_lele.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-1.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-2.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-3.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-4.png" alt="">
-                        </div>
+                        </div>                        
                     </div>
                     <div class="text-bussiness">
                         <div class="bussiness-name">
@@ -213,11 +201,7 @@
                                 <p>Desa Tumpak Rejo memiliki usaha dalam pembibitan lele dengan cara pemijahan antara lele betina dengan lele jantan. Setelah dilakukan pemijahan lele betina akan bertelur dan netas sekitar 3 hari. Lele yang baru menetas kemudian akan dibiarkan selama satu minggu untuk dilakukan grading sesuai ukuran masing-masing. Ukuran lelepun juga beragam mulai dari larva, 1, 2 dan 3.</p>
                                 <p>Lele yang udah memasuki ukuran 3 adalah lele yang siap untuk dijual kepada costumer atau para pelaku pembesar lele dengan harga perekor dan tidak memiliki minimal pembelian.</p>
                             </div>
-                            <p class="focus-description">Harga : Rp.100 / Ekor bibit lele ukuran 3</p>
-                            <div class="contact-bussiness">
-                                <p class="focus-description">Hubungi Kami :<a href="">+6183150993913</a></p>
-                                <p class="focus-description">Lokasi : Jl Ini Contoh No.3 Rt.4 Desa Tumpakrejo</p>
-                            </div>
+                            <p class="focus-description"><a href="bussiness.html">Detail Usaha</a></p>                           
                         </div>
                     </div>
                 </section>
@@ -225,19 +209,7 @@
                     <div class="grid-container">
                         <div class="focal-bussiness">
                             <img src="/images/image-content/bussiness/focal-bibit_lele.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-1.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-2.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-3.png" alt="">
-                        </div>
-                        <div class="item-bussiness">
-                            <img src="/images/image-content/bussiness/item-bussiness-4.png" alt="">
-                        </div>
+                        </div>                        
                     </div>
                     <div class="text-bussiness">
                         <div class="bussiness-name">
@@ -249,11 +221,7 @@
                                 <p>Desa Tumpak Rejo memiliki usaha dalam pembibitan lele dengan cara pemijahan antara lele betina dengan lele jantan. Setelah dilakukan pemijahan lele betina akan bertelur dan netas sekitar 3 hari. Lele yang baru menetas kemudian akan dibiarkan selama satu minggu untuk dilakukan grading sesuai ukuran masing-masing. Ukuran lelepun juga beragam mulai dari larva, 1, 2 dan 3.</p>
                                 <p>Lele yang udah memasuki ukuran 3 adalah lele yang siap untuk dijual kepada costumer atau para pelaku pembesar lele dengan harga perekor dan tidak memiliki minimal pembelian.</p>
                             </div>
-                            <p class="focus-description">Harga : Rp.100 / Ekor bibit lele ukuran 3</p>
-                            <div class="contact-bussiness">
-                                <p class="focus-description">Hubungi Kami :<a href="">+6183150993913</a></p>
-                                <p class="focus-description">Lokasi : Jl Ini Contoh No.3 Rt.4 Desa Tumpakrejo</p>
-                            </div>
+                            <p class="focus-description"><a href="bussiness.html">Detail Usaha</a></p>                                                    
                         </div>
                     </div>
                 </section>
