width in price bussiness
make width to max-content

--- a/bussiness.html
+++ b/bussiness.html
@@ -65,7 +65,7 @@
                 <p>Harga Bibit Lele</p>                                    
                     <div class="price" id="rp">
                         <img src="/images/icons/price.png" alt="person">
-                        <p>100/ekor</p>
+                        <p>100/ekorasdasdasdasdsadasdas</p>
                     </div>                
             </div>
             <div class="payment-bussiness">
